--- a/WebApp/Jenkins/docker-compose.yaml
+++ b/WebApp/Jenkins/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 services:
   jnk:
     build: ./docker
-    image: jenkins:latest
+#    image: jenkins:latest
     container_name: jnkdock
     ports:
       - 18080:8080
